infra/k8s/ingress-controller/post-ingress-srv.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: posts-ingress-srv
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/use-regex: "true"
spec:
  rules:
    - host: post-service.com
      http:
        paths:
          - path: /post
            pathType: Prefix
            backend:
              service:
                name: post-clusterip-srv
                port:
                  number: 5000
          - path: /post/?(.*)/comment
            pathType: Prefix
            backend:
              service:
                name: comment-clusterip-srv
                port:
                  number: 5001
          - path: /posts
            pathType: Prefix
            backend:
              service:
                name: query-clusterip-srv
                port:
                  number: 5002
          - path: /?(.*)
            pathType: Prefix
            backend:
              service:
                name: client-clusterip-srv
                port:
                  number: 3000
